--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <body>
         <header class="header">
             <div class="container">
-                <div class="header__top"></div>
-                <div class="header__content"></div>
+                <div class="header__top">
+                    <a href="#" class="logo"><img src="./assets/images/logo.svg" alt="" /></a>
+                    <nav class="menu"></nav>
+                </div>
+                <div class="header__content">some content</div>
             </div>
         </header>
     </body>
