--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,500;700&display=swap" rel="stylesheet" />
+
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css" />
         <link rel="stylesheet" href="./styles/reset.css" />
         <link rel="stylesheet" href="./styles/style.css" />
@@ -12,10 +16,34 @@
         <header class="header">
             <div class="container">
                 <div class="header__top">
-                    <a href="#" class="logo"><img src="./assets/images/logo.svg" alt="" /></a>
-                    <nav class="menu"></nav>
+                    <a href="#" class="logo"><img src="./assets/images/logo.svg" alt="apple logo" /></a>
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Info</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Product</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Contacts</a>
+                            </li>
+                            <li class="menu__item">
+                                <button class="menu__btn">BUY</button>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-                <div class="header__content">some content</div>
+                <div class="header__content">
+                    <h1 class="title">Air Pod S M AX</h1>
+                    <div class="header__content-images">
+                        <img src="assets/images/airpods-blue.png" alt="" />
+                        <img src="assets/images/airpods-black.png" alt="" />
+                        <img src="assets/images/airpods-green.png" alt="" />
+                        <img src="assets/images/airpods-red.png" alt="" />
+                        <img src="assets/images/airpods-white.png" alt="" />
+                    </div>
+                </div>
             </div>
         </header>
     </body>
