--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Document</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,500;700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,500&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,700&display=swap" rel="stylesheet" />
 
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css" />
         <link rel="stylesheet" href="./styles/reset.css" />
@@ -35,13 +36,16 @@
                     </nav>
                 </div>
                 <div class="header__content">
-                    <h1 class="title">Air Pod S M AX</h1>
+                    <h1 class="title">
+                        <span class="title--air">Air</span><span class="title--pod">Pod</span><span class="title--s">S</span
+                        ><span class="title--m">M</span><span class="title--ax">AX</span>
+                    </h1>
                     <div class="header__content-images">
                         <img src="assets/images/airpods-blue.png" alt="" />
-                        <img src="assets/images/airpods-black.png" alt="" />
+                        <!-- <img src="assets/images/airpods-black.png" alt="" />
                         <img src="assets/images/airpods-green.png" alt="" />
                         <img src="assets/images/airpods-red.png" alt="" />
-                        <img src="assets/images/airpods-white.png" alt="" />
+                        <img src="assets/images/airpods-white.png" alt="" /> -->
                     </div>
                 </div>
             </div>
