--- a/index.html
+++ b/index.html
@@ -50,5 +50,54 @@
                 </div>
             </div>
         </header>
+        <main class="main">
+            <section class="choose-color">
+                <div class="container">
+                    <h3 class="choose-color__title">Choose your colour</h3>
+                    <p class="choose-color__text">
+                        The perfect balance between the purity of hi‑fi and the magic of AirPods. The ultimate personal audio experience.
+                    </p>
+                    <div class="choose-color__list">
+                        <!-- <img src="./assets/images/airpods-select-blue.png" alt="" /> -->
+
+                        <button class="choose__color-btn">
+                            <img src="./assets/images/airpods-select-green.png" alt="" />
+                        </button>
+                        <button class="choose__color-btn">
+                            <img src="./assets/images/airpods-select-white.png" alt="" />
+                        </button>
+                        <button class="choose__color-btn">
+                            <img src="./assets/images/airpods-select-red.png" alt="" />
+                        </button>
+                        <button class="choose__color-btn">
+                            <img src="./assets/images/airpods-select-black.png" alt="" />
+                        </button>
+                    </div>
+                </div>
+            </section>
+            <section class="composition">
+                <div class="container">
+                    <h2 class="composition__title">An extremely original composition.</h2>
+                    <p class="composition__text">
+                        Introducing the reinvention of over-the-ear headphones. From the cushion to the headband, the AirPods Max are
+                        designed with acoustic insulation in mind, adapted to many head shapes, so you can immerse yourself in the purity of
+                        sound.
+                    </p>
+                    <div class="composition__inner">
+                        <div class="composition__inner-text">
+                            <p>The headband is made of breathable mesh, distributing the weight to reduce pressure on the head.</p>
+                            <p>
+                                The stainless steel structure is wrapped in a soft-touch material to provide a remarkable harmony between
+                                resistance, flexibility and comfort.
+                            </p>
+                            <p>
+                                The telescoping arms expand and stay in any position you want, allowing you to maintain fit and isolation.
+                            </p>
+                        </div>
+                        <img src="./assets/images/airpodr-side-blue.jpg" alt="" />
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
