add some adaptive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="./styles/style.css" />
     </head>
     <body>
-        <header class="header">
+        <!-- <header class="header">
             <div class="container">
                 <div class="header__top">
                     <a href="#" class="logo"><img src="./assets/images/logo.svg" alt="apple logo" /></a>
@@ -42,14 +42,14 @@
                     </h1>
                     <div class="header__content-images">
                         <img src="assets/images/airpods-blue.png" alt="" />
-                        <!-- <img src="assets/images/airpods-black.png" alt="" />
+                        <img src="assets/images/airpods-black.png" alt="" />
                         <img src="assets/images/airpods-green.png" alt="" />
                         <img src="assets/images/airpods-red.png" alt="" />
-                        <img src="assets/images/airpods-white.png" alt="" /> -->
+                        <img src="assets/images/airpods-white.png" alt="" />
                     </div>
                 </div>
             </div>
-        </header>
+        </header> -->
         <main class="main">
             <section class="choose-color">
                 <div class="container">
